# autonomous_mobile_robotics

./: .gitignore  README.md  TELEOP_WALKTHROUGH.md  frames_2026-02-10_07.47.01.gv  frames_2026-02-10_07.49.59.gv  ydlidar_slam.rviz
.devcontainer/: devcontainer.json
compose/: docker-compose.pi.yml
docker/: Dockerfile  entrypoint.sh
docs/: ARM_CONTROL_README.md  AUTONOMOUS_NAVIGATION_GUIDE.md  CAMERA_SYSTEM_GUIDE.md  README.md  RaspberryPi_Ubuntu22_Offline_Network_Guide-1.md  SLAM_MAPPING_GUIDE.md  usb_transfer.md
src/: build.sh  run_ascamera_component.sh  run_ascamera_node.sh
src/ascamera/: HP60C_Lidar_RaspberryPi_Deployment_Guide.md  HP60C_RaspberryPi_Fix.md
src/ascamera/launch/: hp60c.launch.py  nuwa.launch.py
src/composition/: CMakeLists.txt  package.xml
src/composition/include/: CameraPublisher.h  ascamera_composition.hpp
src/composition/launch/: changA_composition.launch.py  hp60c_composition.launch.py  hp60cn_composition.launch.py  (+4 more)
src/lidarbot_firmware/: firmware.md  gripper_servo.ino  main.ino  main_n_arm.ino  main_n_servo.ino  motor_pos_control.ino  servo_test.ino
src/lidarbot_serial_base/: CMakeLists.txt  README.md  check_serial.py  lidarbot_serial_base.xml  package.xml
src/lidarbot_serial_base/include/lidarbot_serial_base/: lidarbot_serial_hardware.hpp
src/lidarbot_serial_base/src/: lidarbot_serial_hardware.cpp
src/navigation/: README.md  autonomous_navi.py  dwb_config.py  dwb_integrated.py  dwb_planner.py  dwb_visualizer.py
src/vision_system/: README.md  color_calibration_tool.py  color_depth_ros_node.py  color_depth_visualizer.py  color_identifier.py  color_presets.json  colour_detection.py  rgbd_object_detector.py  ros_color_detection.py  shape_detector.py  walkthrough.md
src/waypoint_nav/: package.xml  setup.py
(+20 files in other folders)
